--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "manifest_version": 2,
     "content_scripts": [{
         "matches": ["https://github.com/*"],
-        "js": ["build/main.js"]
+        "js": ["main.js"]
     }],
     "permissions": [
         "tabs",
